# template-python

./: .gitignore  .pre-commit-config.yaml  NOTES.adoc  README.adoc  cargo.py  noxfile.py  pyproject.toml  pyproject.toml.try_build
container/: Containerfile  build_prod.sh  run.sh
src/hello_world/: __main__.py
src/template_python/: __cli__.py  __main__.py  cli.py  lib.py
tests/: test_hello_world.py
