[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# See more keys and their definitions at https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[project]
name = "python_template"
version = "2023.07.21"
classifiers = ["Private :: Do Not Upload"]

[project.optional-dependencies]
test = ["pytest"]
lint = ["black", "ruff"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
