[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# See more keys and their definitions at https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[project]
name = "hello_world"
version = "0.1.0"
classifiers = ["Private :: Do Not Upload"]

[project.optional-dependencies]
test = ["pytest"]
lint = ["black", "ruff; platform_machine != 'aarch64'"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
